# alleged

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: graph.rs  lib.rs
bindings/python/src/entry/: iter.rs  kind.rs  mod.rs
examples/: append_to_today.rs  mark_tasks_done.rs
src/: block.rs  consts.rs  error.rs  file.rs  lib.rs  preprocess.rs  properties.rs
src/block/: impl.rs  mod.rs  node.rs
src/block/due/: kind.rs  mod.rs  repeater.rs
src/block/property/: block.rs  mod.rs
src/block/task/: marker.rs  mod.rs  node.rs  priority.rs  repeater.rs  scheduled.rs
src/block/text/: mod.rs  node.rs
src/graph/: builder.rs  error.rs  mod.rs
src/graph/entry/: buffer.rs  kind.rs  mod.rs  properties.rs
src/page/: error.rs  mod.rs  process.rs  properties.rs
src/task/: marker.rs  mod.rs  priority.rs  repeater.rs  scheduled.rs
