[workspace]
members = ["bindings/*"]

[workspace.package]
version = "0.2.2"
authors = ["stel <stel@national.shitposting.agency>"]
edition = "2024"
description = "Read/write to Logseq note graphs in Rust"
keywords = ["logseq", "markdown", "markdown-parser", "logseq-graph"]
homepage = "https://github.com/0xstel-contrib/alleged"
repository = "https://codeberg.org/0xstel/alleged"
readme = "README.md"
license = "0BSD"

[workspace.dependencies]
time = { version = "0.3.54", features = ["formatting", "macros", "parsing", "local-offset"] }
pyo3 = "0.29.0"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[package]
name = "alleged-lib"
exclude = [
    "/.cargo/",
    "/assets/",
    "/bindings/"
]
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["regex-lite"]
regex = ["dep:regex"]
regex-lite = ["dep:regex-lite"]
serde = ["dep:serde", "time/serde"]
python = ["dep:pyo3"]

[dependencies]
comrak = { version = "0.54.0", default-features = false }
humantime = "2.4.0"
nutype = "0.7.0"
pyo3 = { workspace = true, optional = true }
regex-lite = { version = "0.1.9", optional = true }
regex = { version = "1.13.1", optional = true }
rustc-hash = "2.1.3"
serde = { version = "1.0.0", features = ["derive"], optional = true }
thiserror = "2.0.19"
time = { workspace = true }
walkdir = "2.5.0"
