[package]
name = "alleged-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "alleged"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
alleged-lib = { path = "../../", features = ["python"] }
time = { workspace = true }
pyo3 = { workspace = true }
